[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/zones/buildings/building.gd" type="Script" id=1]
[ext_resource path="res://scenes/zones/buildings/tiles/building_tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/door/door.tscn" type="PackedScene" id=3]

[node name="building" type="Node2D"]
script = ExtResource( 1 )

[node name="tiles" parent="." instance=ExtResource( 2 )]

[node name="door" parent="." instance=ExtResource( 3 )]
position = Vector2( 192, 384 )

[node name="player_detector" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player_detector"]
polygon = PoolVector2Array( 19, 155, 75, 140, 78, 79, 362, 79, 368, 139, 424, 153, 432, 402, 413, 423, 263, 424, 263, 406, 185, 406, 185, 422, 34, 423, 18, 402 )
[connection signal="closed" from="door" to="." method="_on_door_closed"]
[connection signal="open" from="door" to="." method="_on_door_open"]
[connection signal="area_entered" from="player_detector" to="." method="_on_player_detector_area_entered"]
[connection signal="area_exited" from="player_detector" to="." method="_on_player_detector_area_exited"]

[editable path="tiles"]
